@@ -3,7 +3,6 @@ package multithreading.queue;
 import java.util.List;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class CashBoxRunner {
@@ -11,18 +10,17 @@ public class CashBoxRunner {
         BlockingQueue<CashBox> cashBoxes = new ArrayBlockingQueue<>(2, true, List.of(new CashBox(), new CashBox()));
 
         List<Thread> threads = Stream.of(
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes),
-                new BuyerThread(cashBoxes)
-        )
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes),
+                        new BuyerThread(cashBoxes)
+                )
                 .map(Thread::new)
-                .peek(Thread::start)
-                .collect(Collectors.toList());
+                .peek(Thread::start).toList();
 
         for (Thread thread : threads) {
             try {
